--- a/UUIDPhase1/src/main/resources/application.properties
+++ b/UUIDPhase1/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=UUIDPhase1
+
+#needs work to connect to the DB  DOCKER DON'T WORK.
+spring.datasource.url=jdbc:postgresql://localhost:5432/yourdatabase
+spring.datasource.username=yourusername
+spring.datasource.password=yourpassword
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+
+# JPA/Hibernate Configuration
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
